--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -1,3 +1,4 @@
 # for javascript srings
-subjectRegex=subject (RegEx)
+subjectRegex=Subject (RegEx)
 DayTime=Time (Every Day)
+attachmentName=Attachment Name
