attachmentNameOrType issues so far are sometimes the value changed in the search dialog can't be reflected to searchValue

--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -1,4 +1,4 @@
 # for javascript srings
 subjectRegex=Subject (RegEx)
 DayTime=Time (Every Day)
-attachmentName=Attachment Name
+attachmentNameOrType=Attachment Name/Type
