--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -1,4 +1,5 @@
 # for javascript srings
 subjectRegex=Subject (RegEx)
 DayTime=Time (Every Day)
+dateMatch=Date Match
 attachmentNameOrType=Attachment Name/Type
