added OO base customerTermBase. added subjectSimple customer term.

--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -1,5 +1,6 @@
 # for javascript srings
 subjectRegex=Subject (RegEx)
-DayTime=Time (Every Day)
-dateMatch=Date Match
+subjectSimple=Subject (Long)
+dayTime=Time (Every Day)
+dateMatch=Date Match (2011/01/01)
 attachmentNameOrType=Attachment Name/Type
