minor changes for locale and help.

--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -1,6 +1,9 @@
-# for javascript srings
+# for customer search terms
 subjectRegex=Subject (RegEx)
 subjectSimple=Subject (Long)
 dayTime=Time (Every Day)
 dateMatch=Date Match (2011/01/01)
 attachmentNameOrType=Attachment Name/Type
+
+# If you can localize the help document, please change "content" to "locale" below and put locailized document under locale dir
+expressionsearch.helpfile=chrome://expressionsearch/content/help.html
