--- a/locale/zh-CN/ExpressionSearch.dtd
+++ b/locale/zh-CN/ExpressionSearch.dtd
@@ -1,3 +1,6 @@
+<!ENTITY expressionsearch.focusSearch.key        "b">
+<!ENTITY expressionsearch.focusSearch.mod        "accel">
+
 <!ENTITY about.about "关于">
 <!ENTITY about.author "作者:">
 <!ENTITY about.help "帮助">
@@ -5,14 +8,25 @@
 <!ENTITY about.contributors.label "参与作者:">
 
 <!ENTITY expressionsearch.textbox.emptyText.base "表达式搜索... #1">
+
 <!ENTITY expressionsearch.option.hidenormal "隐藏'过滤这些消息...'输入框">
+<!ENTITY expressionsearch.option.act_as_normal_filter "当被搜索字符串中没有':'时，和普通搜索框一样">
 <!ENTITY expressionsearch.option.hidelabel "隐藏 '快速过滤' 字符串以得到更多空间">
 <!ENTITY expressionsearch.option.reusefolder "重新生成保存搜索时不改变选其中的文件夹选择">
+<!ENTITY expressionsearch.option.select_on_enter "按回车选中第一条邮件">
 <!ENTITY expressionsearch.option.help "查看帮助">
 <!ENTITY expressionsearch.option.email "给作者发邮件">
+<!ENTITY expressionsearch.option.c2s_enableCtrl "邮件列表中按 Ctrl+鼠标右键 执行搜索">
+<!ENTITY expressionsearch.option.c2s_enableShift "邮件列表中按 Shift+鼠标右键 执行搜索">
+
 <!ENTITY expressionsearch.dialog.title "Expression Search 首选项">
 <!ENTITY expressionsearch.dialog.settings "设置">
+<!ENTITY expressionsearch.dialog.move2bar "移动 Expression Search 到">
+<!ENTITY expressionsearch.dialog.move2quicksearchbar "快速搜索栏">
+<!ENTITY expressionsearch.dialog.move2toolbar "工具栏">
+<!ENTITY expressionsearch.dialog.move2menubar "菜单栏">
+<!ENTITY expressionsearch.dialog.c2s_settings "设置点击搜索">
 <!ENTITY expressionsearch.dialog.help "帮助">
-
-<!-- If you can localize the help document, please change "content" to "locale" below and put locailized document under locale dir -->
-<!ENTITY expressionsearch.option.helpfile "chrome://expressionsearch/content/help.html">
+<!ENTITY expressionsearch.dialog.c2s_replace_title "  搜索前使用正则表达式替换标题  ">
+<!ENTITY expressionsearch.dialog.c2s_match "匹配">
+<!ENTITY expressionsearch.dialog.c2s_replace "替换">
