Ctrl+f focus people search box in addressbook window

--- a/locale/en-US/ExpressionSearch.dtd
+++ b/locale/en-US/ExpressionSearch.dtd
@@ -1,6 +1,9 @@
 <!ENTITY expressionsearch.focusSearch.key        "b">
 <!ENTITY expressionsearch.focusSearch.mod        "accel">
 
+<!ENTITY expressionsearch.focusPeopleSearch.key  "f">
+<!ENTITY expressionsearch.focusPeopleSearch.mod  "accel">
+
 <!ENTITY about.about "About">
 <!ENTITY about.author "Author:">
 <!ENTITY about.help "Help">
