for version 0.8.4: Added tonocc/bcc/cc/only/age search Added options for show verbose information Fixed '<>' in search pattern issue when use click2search Fixed search issue when use click2search and address is in addressbook Fixed hang issue when '\t' exists in search pattern Fixed minor bug that extension defined search terms show when search in address book

--- a/locale/en-US/ExpressionSearch.dtd
+++ b/locale/en-US/ExpressionSearch.dtd
@@ -17,6 +17,7 @@
 <!ENTITY expressionsearch.option.hidelabel "Hide string 'Quick Filter' to get more space">
 <!ENTITY expressionsearch.option.reusefolder "Keep selected folders for saved search">
 <!ENTITY expressionsearch.option.select_on_enter "Select first message after hit enter">
+<!ENTITY expressionsearch.option.enable_verbose_info "Show verbose information in error console">
 <!ENTITY expressionsearch.option.help "View help document">
 <!ENTITY expressionsearch.option.email "Send Email to author">
 <!ENTITY expressionsearch.option.crash "Thunderbird Crash Reports">
