--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -1,4 +1,6 @@
 # for customer search terms
+Bcc=Bcc
+toSomebodyOnly=To Somebody Only
 subjectRegex=Subject (RegEx)
 subjectSimple=Subject (Long)
 dayTime=Time (Every Day)
