add status bar icon & tips fix stick issue add headerregex (not finished) (issue 2 5) add tag:na (issue 9) add status:star add newer_than/older_than and support today/yesterday/day/month/year (issue 6 & 10) export ExpressionSearchTokens add background for help.html (issue 11) fix crash issue when ctrl2search on headers

--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -3,6 +3,7 @@ Bcc=Bcc
 toSomebodyOnly=To Somebody Only
 subjectRegex=Subject (RegEx)
 subjectSimple=Subject (Long)
+headerRegex=Header (RegEx)
 dayTime=Time (Every Day)
 dateMatch=Date Match (2011/01/01)
 attachmentNameOrType=Attachment Name/Type
