--- a/locale/zh-CN/ExpressionSearch.properties
+++ b/locale/zh-CN/ExpressionSearch.properties
@@ -3,6 +3,7 @@ Bcc=密件抄送
 toSomebodyOnly=仅发送给某人
 subjectRegex=标题 (正则表达式)
 subjectSimple=标题 (长)
+headerRegex=邮件头 (正则表达式)
 dayTime=时间 (每天)
 dateMatch=日期匹配 (2011/01/01)
 attachmentNameOrType=附件名字或类型
