Add style for tooltip Add more info tooltip can be disabled

--- a/locale/zh-CN/ExpressionSearch.properties
+++ b/locale/zh-CN/ExpressionSearch.properties
@@ -8,5 +8,29 @@ dayTime=时间 (每天)
 dateMatch=日期匹配 (2011/01/01)
 attachmentNameOrType=附件名字或类型
 
+# for tooltip information
+info.blank=请输入表达式进行搜索
+info.after=after:Mar 10, 2011\naf:(2011/03/01 -2011/03/09)\nafter:Mon, 25 Dec 1995 13:30:00 GMT\naf:(3:0 -4:0) 将搜索每天3到4点的邮件
+info.all=搜索所有from, to, cc, 或者subject以及body符合的邮件
+info.attachment=attachment:yes 或者 a:yes 或者 a:no
+info.bcc=BCC包含
+info.before=before:2011/03/09 07:12:00\nbe:09 Mar 2011 05:00:00
+info.body=Body 包含
+info.cc=CC 包含
+info.date=date:yyyy/mm/dd hh:mm:ss\ndate:2011/01\ndate:2011/01/03
+info.days=age:3 或者 older_than:today 或者 days:(3 -5)\ntoday 相当于 -1, week 相当于 7, month 相当于 30
+info.filename=filename:foo.doc 或者 fi:image 或者 fn:msword 或者 file:html\n搜索附件的名字或者类型(不成熟)
+info.from=from:(Alice 或者 Bob)\n搜索From
+info.newer_than=n:8 或者 nt:7week 或者 newer_than:1year
+info.only=only:tom\n收件人仅仅包含tom
+info.regex=regex:/^begin/i 或者 re:end$ 或者 r:/\d+\s*\d+/\n标题匹配正则表达式
+info.simple=simple:hello'\n标题包含(支持特殊字符)
+info.status=is:replied 或者 i:UnRead 或者 status:Forwarded 或者 status:F\nstatus可以是Replied, Read, Marked/Star, Forwarded, UnRead, New, ImapDeleted 或者 Attachment中的任意一个.
+info.subject=subject:(Hello -World!)\n搜索标题中含有Hello but not World!的邮件
+info.tag=tag:Important\nTag 包含\ntag:NA意味着没有任何的标记
+info.to=To 或者 CC 包含
+info.tonocc=To 包含
+info.gloda=如果使能了全局搜索，那么就使用它
+
 # If you can localize the help document, please change "content" to "locale" below and put locailized document under locale dir
 expressionsearch.helpfile=chrome://expressionsearch/content/help.html
