--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -8,5 +8,29 @@ dayTime=Time (Every Day)
 dateMatch=Date Match (2011/01/01)
 attachmentNameOrType=Attachment Name/Type
 
+# for tooltip information
+info.blank=Please type keywords to search
+info.after=after:Mar 10, 2011\naf:(2011/03/01 -2011/03/09)\nafter:Mon, 25 Dec 1995 13:30:00 GMT\naf:(3:0 -4:0) will search for messages in current view that date between 3am to 4am EVERY day
+info.all=search message within from, to, cc, or subject fields, and the body
+info.attachment=attachment:yes or a:yes or a:no
+info.bcc=BCC field contains
+info.before=before:2011/03/09 07:12:00\nbe:09 Mar 2011 05:00:00
+info.body=Body contains
+info.cc=CC field contains
+info.date=date:yyyy/mm/dd hh:mm:ss\ndate:2011/01\ndate:2011/01/03
+info.days=age:3 or older_than:today or days:(3 -5)\ntoday means -1, week means 7 and month means 30
+info.filename=filename:foo.doc or fi:image or fn:msword or file:html\nsearches for an attachment name or type
+info.from=from:(Alice or Bob)\nSearches From field
+info.newer_than=n:8 or nt:7week or newer_than:1year
+info.only=only:tom\ntom should be the only recipients in to field
+info.regex=regex:/^begin/i or re:end$ or r:/\d+\s*\d+/\nSubject matches
+info.simple=simple:hello'\nSubject field contains, support special characters
+info.status=is:replied or i:UnRead or status:Forwarded or status:F\nThe status can be one of Replied, Read, Marked/Star, Forwarded, UnRead, New, ImapDeleted or Attachment.
+info.subject=subject:(Hello -World!)\nSearches Subject to Contains Hello but not World!
+info.tag=tag:Important\nTag contains\ntag:NA means no tag
+info.to=To or CC field contains
+info.tonocc=To fileld contains
+info.gloda=Trigger gloda search if enabled
+
 # If you can localize the help document, please change "content" to "locale" below and put locailized document under locale dir
 expressionsearch.helpfile=chrome://expressionsearch/content/help.html
