enabled headerregex search use xul for popup

--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -24,6 +24,7 @@ info.from=from:(Alice or Bob)\nSearches From field
 info.newer_than=n:8 or nt:7week or newer_than:1year
 info.only=only:tom\ntom should be the only recipients in to field
 info.regex=regex:/^begin/i or re:end$ or r:/\d+\s*\d+/\nSubject matches
+info.headerre=headerre:List-Id=/all-test/i or h:list-id or hr:header~/^value/
 info.simple=simple:hello'\nSubject field contains, support special characters
 info.status=is:replied or i:UnRead or status:Forwarded or status:F\nThe status can be one of Replied, Read, Marked/Star, Forwarded, UnRead, New, ImapDeleted or Attachment.
 info.subject=subject:(Hello -World!)\nSearches Subject to Contains Hello but not World!
