use strict added bodyre (may crash) use loop to get tooltip info

--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -6,7 +6,8 @@ subjectSimple=Subject (Long)
 headerRegex=Header (RegEx)
 dayTime=Time (Every Day)
 dateMatch=Date Match (2011/01/01)
-attachmentNameOrType=Attachment Name/Type
+attachmentNameOrType=Attachment Name/Type (Warning! May Crash)
+bodyRegex=Body (RegEx) (Warning! May Crash)
 
 # for tooltip information
 info.blank=Please type keywords to search
@@ -16,6 +17,7 @@ info.attachment=attachment:yes or a:yes or a:no
 info.bcc=BCC field contains
 info.before=before:2011/03/09 07:12:00\nbe:09 Mar 2011 05:00:00
 info.body=Body contains
+info.bodyre=bodyre:/hello.*world/i\nBody match\nWarning! May crash your Thunderbird
 info.cc=CC field contains
 info.date=date:yyyy/mm/dd hh:mm:ss\ndate:2011/01\ndate:2011/01/03
 info.days=age:3 or older_than:today or days:(3 -5)\ntoday means -1, week means 7 and month means 30
