--- a/locale/zh-CN/ExpressionSearch.properties
+++ b/locale/zh-CN/ExpressionSearch.properties
@@ -6,7 +6,8 @@ subjectSimple=标题 (长)
 headerRegex=邮件头 (正则表达式)
 dayTime=时间 (每天)
 dateMatch=日期匹配 (2011/01/01)
-attachmentNameOrType=附件名字或类型
+attachmentNameOrType=附件名字或类型 (警告! 可能导致崩溃)
+bodyRegex=正文 (正则表达式) (警告! 可能导致崩溃)
 
 # for tooltip information
 info.blank=请输入表达式进行搜索
@@ -16,6 +17,7 @@ info.attachment=attachment:yes 或者 a:yes 或者 a:no
 info.bcc=BCC包含
 info.before=before:2011/03/09 07:12:00\nbe:09 Mar 2011 05:00:00
 info.body=Body 包含
+info.bodyre=bodyre:/hello.*world/i\n邮件正文匹配正则表达式\n警告!可能导致雷鸟崩溃
 info.cc=CC 包含
 info.date=date:yyyy/mm/dd hh:mm:ss\ndate:2011/01\ndate:2011/01/03
 info.days=age:3 或者 older_than:today 或者 days:(3 -5)\ntoday 相当于 -1, week 相当于 7, month 相当于 30
