add size/larger/smaller token delayedOnSearchKeyPress

--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -33,6 +33,8 @@ info.subject=subject:(Hello -World!)\nSearches Subject to Contains Hello but not
 info.tag=tag:Important\nTag contains\ntag:NA means no tag
 info.to=To or CC field contains
 info.tonocc=To fileld contains
+info.size=size:10 or size:1.4M\nMessage Size big than
+info.smaller=smaller:1G or sm:1024\nMessage Size less than
 info.gloda=Trigger gloda search if enabled
 
 # If you can localize the help document, please change "content" to "locale" below and put locailized document under locale dir
