--- a/locale/zh-CN/ExpressionSearch.properties
+++ b/locale/zh-CN/ExpressionSearch.properties
@@ -26,13 +26,15 @@ info.from=from:(Alice 或者 Bob)\n搜索From
 info.newer_than=n:8 或者 nt:7week 或者 newer_than:1year
 info.only=only:tom\n收件人仅仅包含tom
 info.regex=regex:/^begin/i 或者 re:end$ 或者 r:/\d+\s*\d+/\n标题匹配正则表达式
-info.headerre=headerre:List-Id=/all-test/i 或者 h:list-id or hr:邮件头~/^值/
+info.headerre=headerre:List-Id=/all-test/i 或者 h:list-id 或者 hr:邮件头~/^值/
 info.simple=simple:hello'\n标题包含(支持特殊字符)
 info.status=is:replied 或者 i:UnRead 或者 status:Forwarded 或者 status:F\nstatus可以是Replied, Read, Marked/Star, Forwarded, UnRead, New, ImapDeleted 或者 Attachment中的任意一个.
 info.subject=subject:(Hello -World!)\n搜索标题中含有Hello but not World!的邮件
 info.tag=tag:Important\nTag 包含\ntag:NA意味着没有任何的标记
 info.to=To 或者 CC 包含
 info.tonocc=To 包含
+info.size=size:10 或者 size:1.4M\n邮件大小超过
+info.smaller=smaller:1G 或者 sm:1024\n邮件大小小于
 info.gloda=如果使能了全局搜索，那么就使用它
 
 # If you can localize the help document, please change "content" to "locale" below and put locailized document under locale dir
