simplify how to get options change flex of qfb-filter-bar-spacer according to move2bar add debug menu change donate from paypal to mozilla change flex of quick filter bar items

--- a/locale/en-US/ExpressionSearch.dtd
+++ b/locale/en-US/ExpressionSearch.dtd
@@ -53,4 +53,4 @@
 
 <!ENTITY expressionsearch.menu.donate.label "Donate">
 <!ENTITY expressionsearch.menu.donate.image "chrome://expressionsearch/content/paypal.ico">
-<!ENTITY expressionsearch.menu.donate.pay "paypal">
+<!ENTITY expressionsearch.menu.donate.pay "mozilla">
