--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -10,7 +10,7 @@ attachmentNameOrType=Attachment Name/Type (Warning! May Crash)
 bodyRegex=Body (RegEx) (Warning! May Crash)
 
 # for tooltip information
-info.blank=Please type keywords to search
+info.blank=Please type keywords to search\nYou can disable this tooltip in option dialog
 info.after=after:Mar 10, 2011\naf:(2011/03/01 -2011/03/09)\nafter:Mon, 25 Dec 1995 13:30:00 GMT\naf:(3:0 -4:0) will search for messages in current view that date between 3am to 4am EVERY day
 info.all=search message within from, to, cc, or subject fields, and the body
 info.attachment=attachment:yes or a:yes or a:no
