--- a/locale/zh-CN/ExpressionSearch.dtd
+++ b/locale/zh-CN/ExpressionSearch.dtd
@@ -26,7 +26,9 @@
 <!ENTITY expressionsearch.option.load_virtual_folder_in_tab "在新的Tab中打开保存搜索目录/虚拟目录">
 <!ENTITY expressionsearch.option.select_on_enter "按回车选中第一条邮件">
 <!ENTITY expressionsearch.option.enable_verbose_info "在控制台中显示详细信息">
-<!ENTITY expressionsearch.option.enable_statusbar_info "输入时在状态栏以上显示帮助信息">
+<!ENTITY expressionsearch.option.enable_statusbar_info1 "输入时显示">
+<!ENTITY expressionsearch.option.enable_statusbar_info2 "秒的帮助信息，在搜索完成或者失去焦点后">
+<!ENTITY expressionsearch.option.enable_statusbar_info3 "秒自动隐藏">
 <!ENTITY expressionsearch.option.when_press_ctrl_plus_enter "当按下Ctrl+Enter键时，在下面目录里创建或更新ExpressionSearch虚拟目录:">
 <!ENTITY expressionsearch.option.use_root_folder "当前目录的根目录">
 <!ENTITY expressionsearch.option.help "帮助">
@@ -50,6 +52,9 @@
 <!ENTITY expressionsearch.dialog.c2s_replace_title "  搜索前使用正则表达式替换标题  ">
 <!ENTITY expressionsearch.dialog.c2s_match "匹配">
 <!ENTITY expressionsearch.dialog.c2s_replace "替换">
+
+<!ENTITY expressionsearch.tooltip.helpLine1 "您可以在选项里面关闭此提示">
+<!ENTITY expressionsearch.tooltip.helpLine2 "请输入表达式进行搜索">
 
 <!ENTITY expressionsearch.menu.donate.label "资助">
 <!ENTITY expressionsearch.menu.donate.image "chrome://expressionsearch/content/alipay.ico">
