--- a/locale/zh-CN/ExpressionSearch.properties
+++ b/locale/zh-CN/ExpressionSearch.properties
@@ -10,7 +10,7 @@ attachmentNameOrType=附件名字或类型 (警告! 可能导致崩溃)
 bodyRegex=正文 (正则表达式) (警告! 可能导致崩溃)
 
 # for tooltip information
-info.blank=请输入表达式进行搜索
+info.blank=请输入表达式进行搜索\n您可以在选项里面关闭此提示
 info.after=after:Mar 10, 2011\naf:(2011/03/01 -2011/03/09)\nafter:Mon, 25 Dec 1995 13:30:00 GMT\naf:(3:0 -4:0) 将搜索每天3到4点的邮件
 info.all=搜索所有from, to, cc, 或者subject以及body符合的邮件
 info.attachment=attachment:yes 或者 a:yes 或者 a:no
