--- a/locale/zh-CN/ExpressionSearch.dtd
+++ b/locale/zh-CN/ExpressionSearch.dtd
@@ -59,3 +59,10 @@
 <!ENTITY expressionsearch.menu.donate.label "资助">
 <!ENTITY expressionsearch.menu.donate.image "chrome://expressionsearch/content/alipay.ico">
 <!ENTITY expressionsearch.menu.donate.pay "alipay">
+
+<!ENTITY expressionsearch.virtualfolder.selectall "选择所有">
+<!ENTITY expressionsearch.virtualfolder.clearall "清空选择">
+<!ENTITY expressionsearch.virtualfolder.modelabel "鼠标单击时改变">
+<!ENTITY expressionsearch.virtualfolder.modesingle "仅当前项">
+<!ENTITY expressionsearch.virtualfolder.modechild "当前项以及子节点">
+<!ENTITY expressionsearch.virtualfolder.modedescendants "当前项以及以下所有子节点">
