--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -4,6 +4,7 @@ toSomebodyOnly=To Somebody Only
 subjectRegex=Subject (RegEx)
 subjectSimple=Subject (Long)
 headerRegex=Header (RegEx)
+fromRegex=From (RegEx)
 dayTime=Time (Every Day)
 dateMatch=Date Match (2011/01/01)
 attachmentNameOrType=Attachment Name/Type (Warning! May Crash)
@@ -24,6 +25,7 @@ info.date=date:yyyy/mm/dd hh:mm:ss\ndate:2011/01\ndate:2011/01/03
 info.days=age:3 or older_than:today or days:(3 -5)\ntoday means -1, week means 7 and month means 30
 info.filename=filename:foo.doc or fi:image or fn:msword or file:html\nsearches for an attachment name or type
 info.from=from:(Alice or Bob)\nSearches From field
+info.fromre=fromre:/^[a-d].*[m-z]$/i\nSearches From field using regular expression
 info.newer_than=n:8 or nt:7week or newer_than:1year
 info.only=only:tom\ntom should be the only recipients in to field
 info.regex=regex:/^begin/i or re:end$ or r:/\d+\s*\d+/\nSubject matches
