--- a/locale/zh-CN/ExpressionSearch.properties
+++ b/locale/zh-CN/ExpressionSearch.properties
@@ -5,6 +5,7 @@ subjectRegex=标题 (正则表达式)
 subjectSimple=标题 (长)
 headerRegex=邮件头 (正则表达式)
 fromRegex=发信人 (正则表达式)
+toRegex=收信人 (正则表达式)
 dayTime=时间 (每天)
 dateMatch=日期匹配 (2011/01/01)
 attachmentNameOrType=附件名字或类型 (警告! 可能导致崩溃)
@@ -26,6 +27,7 @@ info.days=age:3 或者 older_than:today 或者 days:(3 -5)\ntoday 相当于 -1, 
 info.filename=filename:foo.doc 或者 fi:image 或者 fn:msword 或者 file:html\n搜索附件的名字或者类型(不成熟)
 info.from=from:(Alice 或者 Bob)\n搜索From
 info.fromre=fromre:/[a-d]test/i\n使用正则表达式搜索From
+info.tore=tore:/[a-d]test/i\n使用正则表达式搜索收信人
 info.newer_than=n:8 或者 nt:7week 或者 newer_than:1year
 info.only=only:tom\n收件人仅仅包含tom
 info.regex=regex:/^begin/i 或者 re:end$ 或者 r:/\d+\s*\d+/\n标题匹配正则表达式
