toRegex works change Ctrl + <- to Ctrl + Alt + <- consider aMsgHdr.mime2DecodedTo use Services.string directly

--- a/locale/zh-CN/ExpressionSearch.dtd
+++ b/locale/zh-CN/ExpressionSearch.dtd
@@ -5,7 +5,7 @@
 <!ENTITY expressionsearch.focusPeopleSearch.mod  "accel">
 
 <!ENTITY expressionsearch.back2folder.keycode        "VK_LEFT">
-<!ENTITY expressionsearch.back2folder.mod        "accel">
+<!ENTITY expressionsearch.back2folder.mod        "accel alt">
 
 <!ENTITY about.about "关于">
 <!ENTITY about.author "作者:">
