--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -9,7 +9,7 @@ toRegex=To (RegEx)
 dayTime=Time (Every Day)
 dateMatch=Date Match (2011/01/01)
 attachmentNameOrType=Attachment Name/Type (Warning! May Crash)
-bodyRegex=Body (RegEx) (Warning! May Crash)
+bodyRegex=Body (RegEx)
 
 # for tooltip information
 info.disable=You can disable this tooltip in option dialog
