--- a/locale/zh-CN/ExpressionSearch.properties
+++ b/locale/zh-CN/ExpressionSearch.properties
@@ -9,7 +9,7 @@ toRegex=收信人 (正则表达式)
 dayTime=时间 (每天)
 dateMatch=日期匹配 (2011/01/01)
 attachmentNameOrType=附件名字或类型 (警告! 可能导致崩溃)
-bodyRegex=正文 (正则表达式) (警告! 可能导致崩溃)
+bodyRegex=正文 (正则表达式)
 
 # for tooltip information
 info.disable=您可以在选项里面关闭此提示
