Make it clear that tore is for To/Cc/Bcc

--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -5,7 +5,7 @@ subjectRegex=Subject (RegEx)
 subjectSimple=Subject (Long)
 headerRegex=Header (RegEx)
 fromRegex=From (RegEx)
-toRegex=To (RegEx)
+toRegex=Recipients (To/Cc/Bcc RegEx)
 dayTime=Time (Every Day)
 dateMatch=Date Match (2011/01/01)
 attachmentNameOrType=Attachment Name/Type (Warning! May Crash)
@@ -27,7 +27,7 @@ info.days=age:3 or older_than:today or days:(3 -5)\ntoday means -1, week means 7
 info.filename=filename:foo.doc or fi:image or fn:msword or file:html\nsearches for an attachment name or type
 info.from=from:(Alice or Bob)\nSearches From field
 info.fromre=fromre:/^[a-d].*[m-z]$/i\nSearches From field using regular expression
-info.tore=tore:/^[a-d].*[m-z]$/i\nSearches recipients field using regular expression
+info.tore=tore:/^[a-d].*[m-z]$/i\nSearches recipients(To/Cc/Bcc) field using regular expression
 info.newer_than=n:8 or nt:7week or newer_than:1year
 info.only=only:tom\ntom should be the only recipients in to field
 info.regex=regex:/^begin/i or re:end$ or r:/\d+\s*\d+/\nSubject matches
