--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -8,7 +8,7 @@ fromRegex=From (RegEx)
 toRegex=Recipients (To/Cc/Bcc RegEx)
 dayTime=Time (Every Day)
 dateMatch=Date Match (2011/01/01)
-attachmentNameOrType=Attachment Name/Type (Warning! May Crash)
+attachmentNameOrType=Attachment Name/Type
 bodyRegex=Body (RegEx)
 
 # for tooltip information
@@ -42,5 +42,5 @@ info.size=size:10 or size:1.4M\nMessage Size big than
 info.smaller=smaller:1G or sm:1024\nMessage Size less than
 info.gloda=Trigger gloda search if enabled
 
-# If you can localize the help document, please change "content" to "locale" below and put locailized document under locale dir
+# If you can localize the help document, please change "content" to "locale" below and put localized document under locale dir
 expressionsearch.helpfile=chrome://expressionsearch/content/help.html
